v3.0 (unreleased)
    * Changed project email (rss2email@tremily.us) and homepage (http://github.com/wking/rss2email)
    * Split static configuration parameters into a ConfigParser-read config file.  Only data that depends on the feed state is still pickled.
    * Converted the command line interface to argparse, with some restructuring along the way.
    * Added the r2e.1 man page (based on one from the Debian package).
    * Added setup.py and a PyPI page for simpler installation (http://pypi.python.org/pypi/rss2email)
    * Upgraded to Python 3.2 to take advantage of cleaner Unicode handling and argparse.

v2.71 (2011-03-04)
    * Upgraded to feedparser v5.01! (http://code.google.com/p/feedparser/)
    * Upgrade to html2text v3.01! (https://github.com/aaronsw/html2text)
    * Potentialy safer method for writing feeds.dat on UNIX
    * Handle via links with no title attribute
    * Handle attributes more cleanly with OVERRIDE_EMAIL and DEFAULT_EMAIL

v2.70 (2010-12-21)
    * Improved handling of given feed email addresses to prevent mail servers rejecting poorly formed Froms
    * Added X-RSS-TAGS header that lists any tags provided by an entry, which will be helpful in filtering incoming messages

v2.69 (2010-11-12)
    * Added support for connecting to SMTP server via SSL, see SMTP_SSL option
    * Improved backwards compatibility by fixing issue with listing feeds when run with older Python versions
    * Added selective feed email overrides through OVERRIDE_EMAIL and DEFAULT_EMAIL options
    * Added NO_FRIENDLY_NAME to from from address only without the friendly name
    * Added X-RSS-URL header in each message with the link to the original item

v2.68 (2010-10-01)
    * Added ability to pause/resume checking of individual feeds through pause and unpause commands
    * Added ability to import and export OPML feed lists through importopml and exportopml commands

v2.67 (2010-09-21)