@@ -1,1 +1,1 @@
-@python3 -m rss2email.main -c config -d feeds.dat %1 %2 %3 %4 %5 %6 %7 %8 %9
+@python3 -m rss2email.main -c rss2email.cfg -d rss2email.json %1 %2 %3 %4 %5 %6 %7 %8 %9
